Actually fixed project layout issue.

--- a/templates/sass/resume.scss
+++ b/templates/sass/resume.scss
@@ -46,7 +46,7 @@ a {
 }
 
 .clear {
-    float: clear;
+    clear: both;
 }
 
 .row {
